--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1> Ethan McGuinness- Test Web Page </h1>
+<h1> Ethan McGuinness- Test Web Page and Elliot McGuinness- McGuinness Technology</h1>
 
 </body>
 </html
