--- a/index.html
+++ b/index.html
@@ -14,13 +14,9 @@ body {
 <center>
 <h1> McGuinness Technology </h1>
 
-<br>
-
-<a
-href="file:///Users/ethangray/Documents/McGuinness%20Technology/mcginfinity.html"><img src="mcginfinity.png"
-alt="McG Infinity"
-style="float"></a href>
-
+    <h5> Please be aware that this website is still in beta testing.  If you experience any issues ro have any feedback, please email Ethan McGuinness at- ethan@ethanmcguinness.com 
+</h5>
+    
 <br>
 <hr size=6 color="000000">
 
