--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
     <a href="#home" class="w3-bar-item w3-button"><b>McG</b> Tech</a>
-    <!-- Float links to the right. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="#projects" class="w3-bar-item w3-button">Projects</a>
-      <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+    <!-- Float links to the right. -->
+    <div class="w3-right">
+      <a href="#Updates" class="w3-bar-item w3-button">Updates</a>
+      <a href="#About" class="w3-bar-item w3-button">About</a>
+      <a href="#McG Infinity" class="w3-bar-item w3-button">McG Infinity</a>
+     <a href="#Tech Blogs" class="w3-bar-item w3-button">Tech Blogs</a>
+     <a href="#Hardware" class="w3-bar-item w3-button">Hardware</a>
+      <a href="#Our Apps" class="w3-bar-item w3-button">Our Apps</a>
+    <a href="#Tech Services" class="w3-bar-item w3-button">Tech Services</a>
+      <a href="#Contact" class="w3-bar-item w3-button">Contact</a>
     </div>
   </div>
 </div>
@@ -45,7 +50,8 @@
 <font color="black">
 
 <h3>
-      <!-- Updates Section -->
+<a name="Updates"></a>
+
     To Recive Important Updates and get information on updates regarding our company and COVID-19 go <a href="https://docs.google.com/document/d/1SDGwuZ_TXOJ3hJSM5FCqta3vRr6UIhpKdpVGiYsYo4Q/edit?usp=sharing">here.</a>
     <br>
     <br>
@@ -55,7 +61,8 @@
     <hr size=2 color="000000">
         <br>
         <br>
-      <!-- About Section -->
+<a name="About"></a>
+
         In a fast paced moving world, McGuinness Brothers Inc have now adapted into a stronger suited organization. With the intent of keeping up, we have transformed from McGuinness Brothers Inc, to- McGuinness Technology
 
 
@@ -85,7 +92,8 @@ Let us know if you have any questions at- ethan@ethanmcguinness.com
                <hr size=2 color="000000">
         <br>
         <br>
-      <!-- McG Infinity Section -->
+<a name="McG Infinity"></a>
+
 <h2>McGuinness Infinity</h2>
 -A new out of the box service, now offered in place of McG Pro and CO+. All material from both services have been combined into a single, easy to use service.
  
@@ -100,7 +108,8 @@ Let us know if you have any questions at- ethan@ethanmcguinness.com
 <br>
         <br>
                <hr size=2 color="000000">
-      <!-- Tech Blogs Section -->
+<a name="Tech Blogs"></a>
+
         <br>
         <br>
 To Access our Tech Blogs, visit the seperate website <a href="https://ethanmcguinness.wixsite.com/techblogs">here.</a>
@@ -108,7 +117,8 @@ To Access our Tech Blogs, visit the seperate website <a href="https://ethanmcgui
         <br>
                        <hr size=2 color="000000">
       
-      <!-- Hardware Section -->
+<a name="Hardware"></a>
+
     <br>
         <br>
         <h2>Hardware
@@ -120,7 +130,8 @@ To Access our Tech Blogs, visit the seperate website <a href="https://ethanmcgui
                        <hr size=2 color="000000">
         <br>
         <br>
-      <!-- Our Apps Section -->
+<a name="Our Apps"></a>
+
         <h2>Our Apps!</h2>
 Download the McGuinness Ultra App Today!
 
@@ -151,6 +162,8 @@ Feel free to let us know if you have any questions at- ethan@ethanmcguinness.com
                        <hr size=2 color="000000">
         <br>
         <br>
+    <a name="Tech Services"></a>
+
                 <h2>Tech Services
         <br>
         <br>
@@ -160,7 +173,8 @@ Feel free to let us know if you have any questions at- ethan@ethanmcguinness.com
                        <hr size=2 color="000000">
         <br>
         <br>
-          <!-- About Section -->
+<a name="Contact"></a>
+
 <a href="https://forms.gle/Yeo4zis63FQu9rs3A">Subscirbe to our Newsletter and E-Updates here.</a>
 <br>
     <br>
