--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body {
 </div>
 
 
-<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;Click Here</span>
+<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;Menu</span>
 
 <script>
 function openNav() {
@@ -98,7 +98,7 @@ function closeNav() {
     <h3>
         Please be aware that this website is still in beta testing.  If you experience any issues ro have any feedback, please email Ethan McGuinness at- ethan@ethanmcguinness.com 
 <h3>
-    
+  <a name="Updates"></a>  
 <br>
 <hr size=6 color="000000">
 
@@ -107,7 +107,9 @@ function closeNav() {
 <font color="black">
 
 <h3>
-<a name="Updates"></a>
+Updates
+    <br>
+    <br>
 
     To Recive Important Updates and get information on updates regarding our company and COVID-19 go <a href="https://docs.google.com/document/d/1SDGwuZ_TXOJ3hJSM5FCqta3vRr6UIhpKdpVGiYsYo4Q/edit?usp=sharing">here.</a>
     <br>
