--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>	
 <html>
 
-        <title>McGuinness technology</title>
+        <title>McGuinness Technology</title>
 
         <!DOCTYPE html>
 <html>
