--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@ Updates
         <br>
         <br>
 <a name="About"></a>
+    <br>
+    
+    <h3>About</h3>
 
         In a fast paced moving world, McGuinness Brothers Inc have now adapted into a stronger suited organization. With the intent of keeping up, we have transformed from McGuinness Brothers Inc, to- McGuinness Technology
 
