--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body {
 </div>
 
 
-<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;Menu</span>
+<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;<b>McG</b> Technology</a></span>
 
 <script>
 function openNav() {
