Main Page Button Updates
Main Page Button Updates

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ function closeNav() {
         <br>
         <br>
     <h3>
-        Please be aware that this website is still in beta testing.  If you experience any issues ro have any feedback, please email Ethan McGuinness at- ethan@ethanmcguinness.com 
+        Please be aware that this website is still in beta testing.  If you experience any issues or have any feedback, please email Ethan McGuinness at- ethan@ethanmcguinness.com 
 <h3>
   <a name="Updates"></a>  
 <br>
@@ -138,16 +138,21 @@ Updates
     <br>
     <br>
 
-    To Recive Important Updates and get information on updates regarding our company and COVID-19 go <a href="https://docs.google.com/document/d/1SDGwuZ_TXOJ3hJSM5FCqta3vRr6UIhpKdpVGiYsYo4Q/edit?usp=sharing">here.</a>
+    To Recive Important Updates and get information on updates regarding our company and COVID-19 click the button below.
     <br>
     <br>
+    <a
+href="https://docs.google.com/document/d/1SDGwuZ_TXOJ3hJSM5FCqta3vRr6UIhpKdpVGiYsYo4Q/edit?usp=sharing"><img src="updates.png"
+alt="Updates"
+style="float"></a href>
 
         <br>
         <br>
+    <a name="About"></a>
     <hr size=2 color="000000">
         <br>
         <br>
-<a name="About"></a>
+
  
     <h3>About</h3>
 
@@ -193,17 +198,32 @@ Let us know if you have any questions at- ethan@ethanmcguinness.com
 -Access the service FREE through April 10th using the password: MarchRain
 
 <br>
--To Access and Login to the service, click <a href="https://ethanmcguinness.wixsite.com/website-2/mcguinness-infinity">here.</a>
+-To Access and Login to the service, click the button below</a>
 <br>
         <br>
+        <a
+href="https://ethanmcguinness.wixsite.com/website-2/mcguinness-infinity"><img src="mcginfinity.png"
+alt="McG Infinity"
+style="float"></a href>
+    <br>
+    <br>
     <br>
     <a name="Tech Blogs"></a>
                <hr size=2 color="000000">
 
 
         <br>
+    <h2>Tech Blogs</h2>
         <br>
-To Access our Tech Blogs, visit the seperate website <a href="https://ethanmcguinness.wixsite.com/techblogs">here.</a>
+To Access our Tech Blogs, visit the seperate website by clicking the button below.
+    <br>
+    <br>
+            <a
+href="https://ethanmcguinness.wixsite.com/techblogs"><img src="techblogs.png"
+alt="Tech Blogs"
+style="float"></a href>
+    
+
 <br>
         <br>
     <br>
@@ -272,9 +292,30 @@ Feel free to let us know if you have any questions at- ethan@ethanmcguinness.com
         <br>
         <br>
 
-<h2>Contact us!</h2>
-<a href="https://forms.gle/Yeo4zis63FQu9rs3A">Subscirbe to our Newsletter and E-Updates here.</a>
-<br>
+<h2>Contact us!
+    <br>
+    <br>
+    
+    <br>
+Subscirbe to our Newsletter and E-Updates by clicking the button below. 
+    <br>
+    <br>
+    <a
+href="https://forms.gle/Yeo4zis63FQu9rs3A"><img src="newsletter.png"
+alt="Subscribe to Our Newsletter"
+style="float"></a href>
+    <br>
+    <br>
+    Send us a message by clicking the button below  </h2>
+    <br>
+    <br>
+        <a
+href="https://forms.gle/wLUTGHjTtRxHjYyK8"><img src="contact.png"
+alt="Contact US"
+style="float"></a href>
+
+
+    <br>
     <br>
     <br>
 
