--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ body {
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <a href="#Home" class="w3-bar-item w3-button">Home</a>
+        <a href="#Beta" class="w3-bar-item w3-button">Beta Testing</a>
       <a href="#Updates" class="w3-bar-item w3-button">Updates</a>
       <a href="#About" class="w3-bar-item w3-button">About</a>
       <a href="#McG Infinity" class="w3-bar-item w3-button">McG Infinity</a>
@@ -123,7 +124,14 @@ function closeNav() {
         <br>
         <br>
     <h3>
+            <a name="Beta"></a>
         Please be aware that this website is still in beta testing.  If you experience any issues or have any feedback, please email Ethan McGuinness at- ethan@ethanmcguinness.com 
+        <br>
+        <br>
+
+
+        <br>
+      
 <h3>
   <a name="Updates"></a>  
 <br>
