--- a/index.html
+++ b/index.html
@@ -226,7 +226,10 @@ alt="McG Infinity"
 style="float"></a href>
     <br>
     <br>
+    View updates to your inventory at- updatedcontent.ethanmcguinness.com 
      </font> 
+    <br>
+    <br>
     <br>
     <font color="purple">
     <a name="Tech Blogs"></a>
