--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@ function closeNav() {
         <br>
 If you wish to access McG Tech 1.0, go to- mcgtech1.0.ethanmcguinness.com
         <br>
+        <br>
+        <br>
+        ALSO!- We are now introducing a new McGuinness Technology Company- McGuinness Online Developement/Design! To find out more about what we offer at McG Developement/Design, Visit- mcgdesign.ethanmcguinness.com for more details.
+        <br>
+        <br>
 </font>
         <br>
       
