--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@ function closeNav() {
     <h2>A Quick letter from former Chief Executive and now President of Technology Services-
         <br>
         <br>
-    I, Ethan McGuinness am officially stepping down from my post, and handing over day to day operations of our company to my brother, Elliot McGuinness. 
+    I, Ethan McGuinness am officially stepping down from my post as of August 15th 2020, and handing over day to day operations of our company to my brother, Elliot McGuinness. 
+        <br>
+        <br>
+        Until that time, I will continue to run the company with Elliot McGuinness and the both of us at Co- CEO's until August when I step down.
         <br>
         <br>
 
