--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html>
 <style>
 div {
-  background-image: url('images.jpg');
+  background-image: url('background5.jpg');
 }
 </style>
     
     
-        <title>Alvin Technology</title>
+        <title>McGuinness Technology</title>
     <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -117,7 +117,7 @@ function closeNav() {
     <center>
 <font color="darkgreen">
 
-    <h1> Alvin Technology </h1>
+    <h1> McGuinness Technology </h1>
         <br>
      <hr style="border: 4px solid purple;" />
         <br>
